adjusted styling to match webapp color scheme and added page placeholders. Issue with spacing in Navbar and account icon

--- a/shelfShare/app/globals.css
+++ b/shelfShare/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #5a7463;
     --foreground: #ededed;
   }
 }
@@ -18,4 +18,16 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.bg-custom-green {
+  background-color: #5a7463;
+}
+
+.text-custom-tan {
+  color: #DFDDCE;
+}
+
+.text-custom-brown {
+  color: #847266;
 }
